# Lockr

./: .gitignore  CMakeLists.txt
lockr/: .env.example  CMakeLists.txt
lockr/include/: db.h
lockr/include/class/: user.h
lockr/include/controller/: api.h
lockr/include/controller/api/: company.h  token.h  user.h
lockr/include/controller/api/frontend/: page.h  resource.h
lockr/include/lockr/: db.hpp
lockr/include/service/: data.h
lockr/include/service/auth/: access.h  refresh.h
lockr/include/service/company/api/: create.h  delete.h  verify.h
lockr/include/service/user/: create.h  delete.h  exist.h  login.h
lockr/include/utils/: config.h  configHandler.h  env.h  exit.h  hash.h  json.h  string.h  user.h
lockr/resources/: config.yaml
lockr/src/: db.cpp  main.cpp
lockr/src/class/: user.cpp
lockr/src/controller/: api.cpp
lockr/src/controller/api/: company.cpp  token.cpp  user.cpp
lockr/src/controller/api/frontend/: page.cpp  resource.cpp
lockr/src/service/: data.cpp
lockr/src/service/auth/: access.cpp  refresh.cpp
lockr/src/service/company/api/: create.cpp  delete.cpp  verify.cpp
lockr/src/service/user/: create.cpp  delete.cpp  exist.cpp  login.cpp
lockr/src/utils/: config.cpp  configHandler.cpp  env.cpp  hash.cpp  json.cpp  string.cpp  user.cpp
resources/frontend/pages/: index.html
resources/frontend/style/: index.css
